@@ -1,38 +1,64 @@
 package com.roshan.config;
 
+import com.roshan.entity.CustomUserDetails;
+import com.roshan.entity.Users;
+import com.roshan.repo.IUserRepo;
+import lombok.NonNull;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.data.domain.AuditorAware;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.User;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.server.ServerWebExchange;
-
+import org.springframework.web.servlet.config.annotation.CorsRegistry;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
 
 @Configuration
+@RequiredArgsConstructor
 public class AppConfig {
+
+    private final IUserRepo userRepo;
+
+    @Bean
+    public AuditorAware<Long> auditorProvider() {
+        return () -> {
+            Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+            if (principal instanceof CustomUserDetails) {
+                String username = ((CustomUserDetails) principal).getUsername(); // Email in your case
+                Users user = userRepo.findByEmail(username);  // Assuming findByEmail exists in IUserRepo
+                if (user != null) {
+                    return Optional.of(Objects.requireNonNull(user.getId()));  // Return the user ID
+                }
+            }
+            return Optional.empty();
+        };
+    }
 
     @Bean
     SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-
         http.sessionManagement(management -> management.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
-
         http.authorizeHttpRequests(
                         authorize -> authorize
                                 .requestMatchers("/api/admin**").hasAnyRole("RESTAURANT_OWNER", "ADMIN")
                                 .requestMatchers("/api/**").authenticated()
                                 .requestMatchers("/jwt/**").permitAll()
                                 .anyRequest().permitAll())
-                .addFilterBefore(new JwtTokenValidator(), BasicAuthenticationFilter.class)
-                .csrf(csrf -> csrf.disable())
+                .addFilterBefore(new JwtTokenValidator(userRepo), BasicAuthenticationFilter.class)
+                .csrf(AbstractHttpConfigurer::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()));  // Enable CORS with the custom configuration
-
         return http.build();
     }
 
@@ -40,13 +66,27 @@ public class AppConfig {
     CorsConfigurationSource corsConfigurationSource() {
         return exchange -> {
             CorsConfiguration corsConfiguration = new CorsConfiguration();
-            corsConfiguration.setAllowedOrigins(Arrays.asList("http://localhost:5173")); // Example: Frontend origin
+            corsConfiguration.setAllowedOrigins(List.of("http://localhost:5173")); // Example: Frontend origin
             corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
             corsConfiguration.setAllowCredentials(true);
             corsConfiguration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-            corsConfiguration.setExposedHeaders(Arrays.asList("Authorization"));
+            corsConfiguration.setExposedHeaders(List.of("Authorization"));
             corsConfiguration.setMaxAge(3600L);  // Cache CORS response for 1 hour
             return corsConfiguration;
+        };
+    }
+
+    @Bean
+    public WebMvcConfigurer corsConfigurer() {
+        return new WebMvcConfigurer() {
+            @Override
+            public void addCorsMappings(@NonNull CorsRegistry registry) {
+                registry.addMapping("/**") // Apply CORS to all endpoints
+                        .allowedOrigins("http://localhost:5173") // Allow frontend domain
+                        .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS") // Allowed HTTP methods
+                        .allowedHeaders("*") // Allow all headers
+                        .allowCredentials(true); // Allow credentials (e.g., cookies)
+            }
         };
     }
 
